[package]
edition = "2021"
name = "hls_downloader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
clap = {version = "4.0.29", features = ["derive"]}
hyper = "0.14"
hyper-rustls = "0.23.2"
tokio = {version = "1", features = ["full"]}
webpki-roots = "0.22.5"
